// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupView render actual content render toggles view: ad-hoc tools 1`] = `
"<Fragment>
  <div className=\\"ms-Fabric ad-hoc-tools-panel\\">
    <LaunchPanelHeader deps={{...}} title=\\"test title\\" supportLinkHandler={{...}} popupWindow={[undefined]} openAdhocToolsPanel={[Function]} featureFlags={{...}} />
    <AdHocToolsPanel backLinkHandler={[Function]} diagnosticViewToggleFactory={[undefined]} />
  </div>
  <TelemetryPermissionDialog deps={{...}} isFirstTime={true} />
</Fragment>"
`;

exports[`PopupView render actual content render toggles view: launch pad 1`] = `
"<Fragment>
  <div className=\\"ms-Fabric launch-panel\\" id=\\"new-launch-pad\\">
    <LaunchPanelHeader deps={{...}} title=\\"test title\\" subtitle={{...}} supportLinkHandler={{...}} popupWindow={[undefined]} openAdhocToolsPanel={[Function]} featureFlags={{...}} />
    <LaunchPad deps={{...}} productName=\\"test title\\" rowConfigs={[undefined]} version=\\"2\\" />
  </div>
  <TelemetryPermissionDialog deps={{...}} isFirstTime={true} />
</Fragment>"
`;

exports[`PopupView render actual content render toggles view: launch pad: subtitle 1`] = `
"<Fragment>
  <NewTabLink href=\\"https://go.microsoft.com/fwlink/?linkid=2082374\\" aria-label=\\"demo video\\" title=\\"watch the 3 minute video introduction\\" onClick={[Function: onClickTutorialLink]}>
    Watch 3-minute video introduction
  </NewTabLink>
   
</Fragment>"
`;

exports[`PopupView render actual content renderAdHocToolsPanel 1`] = `
"<Fragment>
  <div className=\\"ms-Fabric ad-hoc-tools-panel\\">
    <LaunchPanelHeader deps={{...}} title=\\"test title\\" supportLinkHandler={{...}} popupWindow={[undefined]} openAdhocToolsPanel={[Function]} featureFlags={{...}} />
    <AdHocToolsPanel backLinkHandler={[Function]} diagnosticViewToggleFactory={{...}} />
  </div>
  <TelemetryPermissionDialog deps={{...}} isFirstTime={true} />
</Fragment>"
`;

exports[`PopupView render spinner 1`] = `
<StyledSpinnerBase
  className="insights-spinner"
  label="Loading..."
  size={3}
/>
`;

exports[`PopupView renderFailureMsgPanelForChromeUrl 1`] = `
<div
  className="ms-Fabric unsupported-url-info-panel"
>
  <Header
    title="test title"
  />
  <div
    className="ms-Grid main-section"
  >
    <div
      className="launch-panel-general-container"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Accessibility Insights for Web can't run on this URL.</br>You'll need to go to a different page.",
        }
      }
    />
  </div>
</div>
`;

exports[`PopupView renderFailureMsgPanelForFileUrl 1`] = `
<FileUrlUnsupportedMessagePanel
  deps={
    Object {
      "browserAdapter": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "addCommandListener": [Function],
        "addListenerOnConnect": [Function],
        "addListenerOnMessage": [Function],
        "addListenerOnWindowsFocusChanged": [Function],
        "addListenerToLocalStorage": [Function],
        "addListenerToTabsOnActivated": [Function],
        "addListenerToTabsOnRemoved": [Function],
        "addListenerToTabsOnUpdated": [Function],
        "addListenerToWebNavigationUpdated": [Function],
        "closeTab": [Function],
        "connect": [Function],
        "createInactiveTab": [Function],
        "createNotification": [Function],
        "createTab": [Function],
        "createTabInNewWindow": [Function],
        "executeScriptInTab": [Function],
        "extensionVersion": undefined,
        "getAllWindows": [Function],
        "getCommands": [Function],
        "getManageExtensionUrl": [Function],
        "getManifest": [Function],
        "getRunTimeId": [Function],
        "getRuntimeLastError": [Function],
        "getTab": [Function],
        "getUrl": [Function],
        "getUserData": [Function],
        "insertCSSInTab": [Function],
        "isAllowedFileSchemeAccess": [Function],
        "removeListenerOnMessage": [Function],
        "removeUserData": [Function],
        "sendMessageToAllFramesAndTabs": [Function],
        "sendMessageToFrames": [Function],
        "sendMessageToTab": [Function],
        "setUserData": [Function],
        "switchToTab": [Function],
        "tabsQuery": [Function],
      },
      "storesHub": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "addChangedListenerToAllStores": [Function],
        "getAllStoreData": [Function],
        "hasStoreData": [Function],
        "hasStores": [Function],
        "removeChangedListenerFromAllStores": [Function],
        "stores": undefined,
      },
    }
  }
  header={
    <Header
      title="test title"
    />
  }
  title="test title"
/>
`;
